try to make background be center

--- a/style/mainstyle.css
+++ b/style/mainstyle.css
@@ -15,6 +15,7 @@ body {
 
 .bingbg {
     background-image: url(https://bing.biturl.top/?resolution=1920&format=image&index=0&mkt=zh-CN);
+    background-position:center center;
     background-size: cover;
 }
 
