加上了一个没有什么用的脚注
添加时间显示并且标注图片来源。
以后提交尽量写中文

--- a/style/mainstyle.css
+++ b/style/mainstyle.css
@@ -50,4 +50,12 @@ body {
     font-weight: 300;
 }
 
+footer {
+    position: absolute;
+    bottom: 1rem;
+    left: 1rem;
+    right: 1rem;
+}
+
+
 
