尝试使用jekyll搭建博客

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
-<html lang="zh-cn">
-    <body>
-        <p>Hello World</p>
+<html lang="zh-CN">
+
+<head>
+    <meta charset="UTF-8">
+    <title>{{ page.title }}</title>
+    <link rel="shortcut icon" href="../assets/favicon.ico" type="image/x-icon" />
+</head>
+
+<body>
+    <div id="root">
         {{ content }}
-    </body>
+    </div>
+</body>
+
 </html>
