--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -3,10 +3,4 @@ layout: default
 title: "Earth_Messenger的博客目录"
 ---
 
-<ul>
-    {% for post in site.posts %}
-        <li>
-            <a href="{{ post.url }}">{{ post.title }}</a>
-        </li>
-    {% endfor %}
-</ul>
+{{ content }}
