--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>{{ page.title }}</title>
-    <link rel="shortcut icon" href="../assets/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="{{ site:url }}/assets/favicon.ico" type="image/x-icon" />
 </head>
 
 <body>
