--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -1,6 +1,20 @@
 ---
-layout: default
 title: "Earth_Messenger的博客目录"
 ---
 
-{{ content }}
+<!DOCTYPE html>
+<html lang="zh-CN">
+
+<head>
+    <meta charset="UTF-8">
+    <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon" />
+    <title>Earth_Messenger的博客目录</title>
+</head>
+
+<body>
+    <div id="root">
+        {{ content }}
+    </div>
+</body>
+
+</html>
