--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,6 +8,9 @@
     <meta charset="UTF-8">
     <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon" />
     <link href="/assets/style/blog.css" rel="stylesheet" type="text/css" />
+    <!--不算子计数js-->
+    <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+    <!--不算子计数js-->
     <title>{{ page.title }}</title>
 </head>
 
@@ -17,7 +20,22 @@
             <header>
                 <a id="back_to_menu" href="/blogs/">返回博客目录</a>
                 <h1 id="title">{{ page.title }}</h1>
+                <div id="blog_data">
+                    <!--不算子计数-->
+                    <div id="website_cnt" style="float: left;">
+                        <span id="busuanzi_container_site_pv">
+                            本文章被巨佬访问了
+                            <span id="busuanzi_value_site_pv">0</span>
+                            次
+                        </span>
+                    </div>
+                    <!--不算子计数-->
+                    <div id="blog_time" style="float: right;">
+                        {{ page.time }}
+                    </div>
+                </div>
             </header>
+
             <hr />
             <div id="content" class="content">
                 {{ content }}
