--- a/assets/style/blog.css
+++ b/assets/style/blog.css
@@ -28,3 +28,15 @@
     margin: 30px auto;
     padding: 0px;
 }
+
+#blog_cnt {
+    color: #505050;
+    font-style: italic;
+}
+
+#blog_data {
+    position: absolute;
+    bottom: 1em;
+    left: 1em;
+    right: 1em;
+}
