--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,25 +20,25 @@
             <header>
                 <a id="back_to_menu" href="/blogs/">返回博客目录</a>
                 <h1 id="title">{{ page.title }}</h1>
-                <div id="blog_data">
-                    <!--不算子计数-->
-                    <div id="website_cnt" style="float: left;">
-                        <span id="busuanzi_container_site_pv">
-                            本文章被巨佬访问了
-                            <span id="busuanzi_value_site_pv">0</span>
-                            次
-                        </span>
-                    </div>
-                    <!--不算子计数-->
-                    <div id="blog_time" style="float: right;">
-                        {{ page.time }}
-                    </div>
-                </div>
-            </header>
 
+            </header>
             <hr />
             <div id="content" class="content">
                 {{ content }}
+            </div>
+            <div id="blog_data">
+                <!--不算子计数-->
+                <div id="website_cnt" style="float: left;">
+                    <span id="busuanzi_container_site_pv">
+                        本文章被巨佬阅读了
+                        <span id="busuanzi_value_pages_pv">0</span>
+                        次
+                    </span>
+                </div>
+                <!--不算子计数-->
+                <div id="blog_time" style="float: right;">
+                    {{ page.time }}
+                </div>
             </div>
         </div>
     </div>
