--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,6 +11,9 @@
     <!--不算子计数js-->
     <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
     <!--不算子计数js-->
+    <!--MathJax-->
+    <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
+    <!--MathJax-->
     <title>{{ page.title }}</title>
 </head>
 
