修复文章不蒜子计数显示为0的问题

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -32,9 +32,9 @@
             <div id="blog_data">
                 <!--不算子计数-->
                 <div id="website_cnt" style="float: left;">
-                    <span id="busuanzi_container_site_pv">
+                    <span id="busuanzi_container_page_pv">
                         本文章被巨佬阅读了
-                        <span id="busuanzi_value_pages_pv">0</span>
+                        <span id="busuanzi_value_page_pv">0</span>
                         次
                     </span>
                 </div>
