--- a/assets/style/blog.css
+++ b/assets/style/blog.css
@@ -5,12 +5,14 @@ img {
 
 code {
     font-family: monospace;
+}
+
+pre {
     background-color: #f6f8fa;
     line-height: 1.45;
     border-radius: 3px;
     padding: 16px;
     overflow: auto;
-    width: 100%;
 }
 
 table {
@@ -21,7 +23,18 @@ table, th, td {
     border: 1px solid currentColor;
     border-collapse: collapse;
     padding: 6px;
+}
 
+h1, h2, h3, h4, h5, h6 {
+    margin-top: 24px;
+    margin-bottom: 16px;
+    font-weight: 600;
+    line-height: 1.25;
+}
+
+h1, h2 {
+    padding-bottom: 0.3em;
+    border-bottom: 1px solid #eaecef;
 }
 
 .light {
@@ -46,6 +59,7 @@ table, th, td {
 
 #content {
     border: 1px solid #e1e4e8;
+    border-radius: 2px;
     padding: 16px;
     padding-left: 32px;
     padding-right: 32px;
