尝试优化代码显示
其实就是忘记把样式加进去了而已

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,6 +8,7 @@
     <meta charset="UTF-8">
     <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon" />
     <link href="/assets/style/blog.css" rel="stylesheet" type="text/css" />
+    <link href="/assets/style/highlight.css" rel="stylesheet" type="text/css" />
     <!--不算子计数js-->
     <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
     <!--不算子计数js-->
