--- a/assets/style/blog.css
+++ b/assets/style/blog.css
@@ -4,7 +4,9 @@ img {
 }
 
 code {
-    font-family: monospace;
+    font-family: monospace, '等距更纱黑体 SC ', sans-serif;
+    background-color: #f6f8f9;
+    border-radius: 3px;
 }
 
 pre {
@@ -48,7 +50,7 @@ h1, h2 {
 
 .container {
     margin: auto;
-    max-width: 40em;
+    max-width: 60%;
     overflow: hidden;
 }
 
