--- a/happy-mothers-day/style.css
+++ b/happy-mothers-day/style.css
@@ -45,7 +45,6 @@ html, body {
     background-color: white;
     color: black;
     font-size: 24px;
-    text-align: center;
     margin-top: 3em;
     margin-left: 10%;
     margin-right: 10%;
@@ -70,4 +69,17 @@ html, body {
     left: 0px;
     width: 100%;
     height: 60%;
+}
+
+.wordTo {
+    text-align: left;
+}
+
+.wordContent {
+    text-align: left;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.wordBy {
+    text-align: right;
 }
