--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,11 +9,13 @@
     <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon" />
     <link href="/assets/style/blog.css" rel="stylesheet" type="text/css" />
     <link href="/assets/style/highlight.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="/assets/style/nav.css" type="text/css" />
     <!--不算子计数js-->
     <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
     <!--不算子计数js-->
     <!--MathJax-->
-    <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
+    <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"
+        type="text/javascript"></script>
     <!--MathJax-->
     <title>{{ page.title }}</title>
 </head>
@@ -22,9 +24,7 @@
     <div id="root" class="light sans-serif">
         <div id="text" class="container" style="font-size: 16px;">
             <header>
-                <a id="back_to_menu" href="/blogs/">返回博客目录</a>
-                <h1 id="title">{{ page.title }}</h1>
-
+                {% include header.html %}
             </header>
             <hr />
             <div id="content" class="content">
