--- a/assets/style/slide.css
+++ b/assets/style/slide.css
@@ -7,44 +7,13 @@
         opacity: 0.8;
     }
 }
-@-moz-keyframes smooth_entry_80 {
-    from {
-        opacity: 0.0;
-    }
-    to {
-        opacity: 0.8;
-    }
-}
-@-webkit-keyframes smooth_entry_80 {
-    from {
-        opacity: 0.0;
-    }
-    to {
-        opacity: 0.8;
-    }
-}
 
-@keyframes smooth_entry {
+
+/* @keyframes input_focus {
     from {
-        opacity: 0.0;
+        border-right: 1px solid white;
     }
     to {
-        opacity: 1.0;
+        border-right: none;
     }
-}
-@-moz-keyframes smooth_entry {
-    from {
-        opacity: 0.0;
-    }
-    to {
-        opacity: 1.0;
-    }
-}
-@-webkit-keyframes smooth_entry {
-    from {
-        opacity: 0.0;
-    }
-    to {
-        opacity: 1.0;
-    }
-}
+} */
