尝试修复Jekyll编译出错的问题 去掉blog的layoutsblog目录的

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -41,7 +41,7 @@
                 </div>
                 <!--不算子计数-->
                 <div id="blog_time" style="float: right;">
-                    {{ page.time }}
+                    {{ page.date }}
                 </div>
             </div>
         </div>
