尝试修复rss页面和目录页面jekyll不编译的问题 尝试修复博客阅读页面样式和目录样式混乱的问题

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,4 +1,5 @@
 ---
+layout: none
 ---
 
 <!DOCTYPE html>
@@ -26,8 +27,8 @@
             <header>
                 {% include header.html %}
             </header>
-            <hr />
             <div id="content" class="content">
+                <h1 id="title_of_text">{{ page.title }}</h1>
                 {{ content }}
             </div>
             <div id="blog_data">
